Made the navbar great again, added more people, evicted unwanted spaces

--- a/_config.yml
+++ b/_config.yml
@@ -145,6 +145,11 @@ servers:
 contributors: 
   regulars: 
     - geisterfurz007: "https://stackoverflow.com/users/6707985/"
-    - "Baum mit Augen": "https://chat.stackoverflow.com/users/3002139/"
-    
+    - "Baum mit Augen": "https://stackoverflow.com/users/3002139/"
+    - "Petter Friberg": "https://stackoverflow.com/users/5292302/"
+    - "Shree": "https://stackoverflow.com/users/965146"
+    - "Floern": "https://stackoverflow.com/users/559745"
+    - "Zoe": "https://stackoverflow.com/users/6296561"
+    - "Jonathan": "https://stackoverflow.com/users/2263949"
+    - "double-beep": "https://stackoverflow.com/users/10607772"
   #coders:
