--- a/_config.yml
+++ b/_config.yml
@@ -152,4 +152,12 @@ contributors:
     - "Zoe": "https://stackoverflow.com/users/6296561"
     - "Jonathan": "https://stackoverflow.com/users/2263949"
     - "double-beep": "https://stackoverflow.com/users/10607772"
+    - "kayess": "https://stackoverflow.com/users/4805174"
+    - "Rob": "https://stackoverflow.com/users/3648282"
+    - "Bhargav Rao": "https://stackoverflow.com/users/4099593"
+    - "Andras Deak": "https://stackoverflow.com/users/5067311"
+    - "Yunnosch": "https://stackoverflow.com/users/7733418"
+    - "FelixSFD": "https://stackoverflow.com/users/4687348"
+    - "Rob": "https://stackoverflow.com/users/563532"
+    - "adiga": "https://stackoverflow.com/users/3082296"
   #coders:
