--- a/_config.yml
+++ b/_config.yml
@@ -160,4 +160,5 @@ contributors:
     - "FelixSFD": "https://stackoverflow.com/users/4687348"
     - "Rob": "https://stackoverflow.com/users/563532"
     - "adiga": "https://stackoverflow.com/users/3082296"
+    - "Rai Telha Rehman Khan": "https://stackoverflow.com/users/6727487"
   #coders:
