--- a/_config.yml
+++ b/_config.yml
@@ -161,5 +161,9 @@ contributors:
     - "Rob": "https://stackoverflow.com/users/563532"
     - "adiga": "https://stackoverflow.com/users/3082296"
     - "Rai Telha Rehman Khan": "https://stackoverflow.com/users/6727487"
+    - "Filnor": "https://stackoverflow.com/users/4733879/"
+    - "Stephen Kennedy": "https://stackoverflow.com/users/397817/"
+    - "NobodyNada": "https://stackoverflow.com/users/3476191"
+    - "Ashish Ahuja": "https://stackoverflow.com/users/4688119"
   #coders:
 
