Add Dharman to SOBotics contributors

--- a/_config.yml
+++ b/_config.yml
@@ -165,5 +165,6 @@ contributors:
     - "NobodyNada": "https://stackoverflow.com/users/3476191"
     - "Ashish Ahuja": "https://stackoverflow.com/users/4688119"
     - "Rai Talha Rehman Khan": "https://stackoverflow.com/users/6727487"
+    - "Dharman": "https://stackoverflow.com/users/1839439"
   #coders:
 
