Add Das_Geek to SOBotics contributors

--- a/_config.yml
+++ b/_config.yml
@@ -166,5 +166,6 @@ contributors:
     - "Ashish Ahuja": "https://stackoverflow.com/users/4688119"
     - "Rai Talha Rehman Khan": "https://stackoverflow.com/users/6727487"
     - "Dharman": "https://stackoverflow.com/users/1839439"
+    - "Das_Geek": "https://stackoverflow.com/users/11384392"
   #coders:
 
