Add a few more contributors

--- a/_config.yml
+++ b/_config.yml
@@ -167,5 +167,12 @@ contributors:
     - "Rai Talha Rehman Khan": "https://stackoverflow.com/users/6727487"
     - "Dharman": "https://stackoverflow.com/users/1839439"
     - "Das_Geek": "https://stackoverflow.com/users/11384392"
+    - "sideshowbarker": "https://stackoverflow.com/users/441757"
+    - "Robert Columbia": "https://stackoverflow.com/users/6471538"
+    - "Machavity": "https://stackoverflow.com/users/2370483"
+    - "Paul Roub": "https://stackoverflow.com/users/1324"
+    - "E_net4": "https://stackoverflow.com/users/1233251"
+    - "Daniil": "https://stackoverflow.com/users/12867493"
+    - "M--": "https://stackoverflow.com/users/6461462"
   #coders:
 
